@@ -1,3 +1,10 @@
+2007-04-20  Richard Earnshaw  <rearnsha@arm.com>
+
+	* gas/arm/mapshort.s: Add a small .data section.
+	* gas/arm/mapshort-eabi.d: Check the data section doesn't confuse
+	disassembly.
+	* gas/arm/mapshort-elf.d: Likewise.
+
 2007-04-19  Paul Brook  <paul@codesourcery.com>
 
 	* gas/arm/thumb1_unified.d: New test.
